force-app/main/default/objects/Order_Charges__c/Order_Charges__c.object-meta.xml
<CustomObject>
    <label>Order Charges</label>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>Order Charges</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>