force-app/main/default/objects/Order_Charges__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Charge Name</label>
    <referenceTo>Additional_Charge__c</referenceTo>
    <relationshipLabel>Order Charges</relationshipLabel>
    <relationshipName>Order_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>