force-app/main/default/objects/Order_Charges__c/fields/Charge_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_Text__c</fullName>
    <label>Charge Name(Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>