force-app/main/default/objects/Order_Charges__c/fields/isAdditionalCharge__c.field-meta.xml
<CustomField>
    <fullName>isAdditionalCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAdditionalCharge</label>
    <type>Checkbox</type>
</CustomField>