force-app/main/default/objects/Order_Charges__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Order Charges</relationshipLabel>
    <relationshipName>Order_Charges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>